Изменяет названия классов в блоке «Advantages»

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </section>
 
       <section class="advantages">
-        <div class="container">
+        <div class="advantages-container">
           <div class="tab-menu">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <button class="advantages-button advantages-button-current" type="button">Доставка</button>
@@ -174,7 +174,7 @@
           </div>
 
           <div class="tab-menu">
-            <h2 class="advantages-title">Наши преимущества</h2>
+            <h2 class="visually-hidden">Наши преимущества</h2>
             <button class="advantages-button" type="button">Доставка</button>
             <button class="advantages-button advantages-button-current" type="button">Гарантия</button>
             <button class="advantages-button" type="button">Кредит</button>
@@ -189,7 +189,7 @@
           </div>
 
           <div class="tab-description">
-            <h2 class="advantages-title">Наши преимущества</h2>
+            <h2 class="visually-hidden">Наши преимущества</h2>
             <button class="advantages-button" type="button">Доставка</button>
             <button class="advantages-button" type="button">Гарантия</button>
             <button class="advantages-button  advantages-button-current" type="button">Кредит</button>
