--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </section>
 
       <section class="product-category">
-        <div class="product-category-container">
+        <div class="container">
           <h2 class="visually-hidden">Категории товаров</h2>
           <a class="product-category-link" href="#">
             <img class="product-category-img" src="" alt="Иконка VR">
@@ -158,7 +158,7 @@
       </section>
 
       <section class="advantages">
-        <div class="advantages-container">
+        <div class="container">
           <div class="tab-menu">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <button class="advantages-button advantages-button-current" type="button">Доставка</button>
@@ -206,7 +206,7 @@
       </section>
 
       <section class="unique-advantage">
-        <div class="unique-advantage-container">
+        <div class="container">
           <h2 class="visually-hidden">Доставка под заказ</h2>
           <button class="unique-advantage-button">
             <div class="img-block">
