Оборачивает блоки футера в обёртку

--- a/index.html
+++ b/index.html
@@ -281,58 +281,60 @@
     </main>
 
     <footer class="page-footer">
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Адрес</h2>
-        <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина «Device»">
-        <address class="cotacts-address">
-          <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-        </address>
-      </section>
+      <div class="container">
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Адрес</h2>
+          <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина «Device»">
+          <address class="cotacts-address">
+            <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          </address>
+        </section>
 
-      <section class="footer-nav-socials">
-        <div class="footer-navigation">
-          <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="footer-advantages-list">
-            <li class="footer-advantages-item">
-              <button class="button button-footer-category">Доставка</button>
-            </li>
-            <li class="footer-advantages-item">
-              <button class="button button-footer-category">Гарантия</button>
-            </li>
-            <li class="footer-advantages-item">
-              <button class="button button-footer-category">Контакты</button>
-            </li>
-          </ul>
-        </div>
+        <section class="footer-nav-socials">
+          <div class="footer-navigation">
+            <h2 class="visually-hidden">Наши преимущества</h2>
+            <ul class="footer-advantages-list">
+              <li class="footer-advantages-item">
+                <button class="button button-footer-category">Доставка</button>
+              </li>
+              <li class="footer-advantages-item">
+                <button class="button button-footer-category">Гарантия</button>
+              </li>
+              <li class="footer-advantages-item">
+                <button class="button button-footer-category">Контакты</button>
+              </li>
+            </ul>
+          </div>
 
-        <div class="footer-social">
-          <h2 class="visually-hidden">Наши социальные сети</h2>
-          <div class="telegram">
-            <a class="social-button" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
+          <div class="footer-social">
+            <h2 class="visually-hidden">Наши социальные сети</h2>
+            <div class="telegram">
+              <a class="social-button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </div>
+            <div class="youtube">
+              <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютьюб</span>
+            </div>
+            <div class="twitter">
+              <a class="social-button" href="https://twitter.com/htmlacademy_ru">
+                <span class="visually-hidden">Твиттер</span>
+              </a>
+            </div>
           </div>
-          <div class="youtube">
-            <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютьюб</span>
-          </div>
-          <div class="twitter">
-            <a class="social-button" href="https://twitter.com/htmlacademy_ru">
-              <span class="visually-hidden">Твиттер</span>
-            </a>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="footer-connection">
-        <h2 class="visually-hidden">Позвоните нам</h2>
-        <address class="cotacts-address">
-          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </address>
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img class="about-text" src="" alt="html-academy-logo">
-        </a>
-      </section>
+        <section class="footer-connection">
+          <h2 class="visually-hidden">Позвоните нам</h2>
+          <address class="cotacts-address">
+            <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </address>
+          <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+            <img class="about-text" src="" alt="html-academy-logo">
+          </a>
+        </section>
+      </div>
     </footer>
   </body>
 
